apps/workloads/media/sonarr/deployment-anime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-anime
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
      sonarr-type: anime
  template:
    metadata:
      labels:
        app: sonarr
        sonarr-type: anime
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr
          ports:
            - name: web-ui
              containerPort: 8989
              protocol: TCP
          startupProbe:
            httpGet:
              path: /ping
              port: web-ui
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              cpu: "25m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          volumeMounts:
            - name: media
              mountPath: /data
            - name: sonarr-config-pvc
              mountPath: /config
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
        fsGroup: 100
        runAsGroup: 100
        runAsNonRoot: true
        runAsUser: 1027
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: sonarr-template-vol
          configMap:
            name: sonarr-anime-config-template
        - name: sonarr-config-pvc
          persistentVolumeClaim:
            claimName: sonarr-anime-pvc
