apps/workloads/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr
          ports:
            - name: web-ui
              containerPort: 8989
              protocol: TCP
          startupProbe:
            httpGet:
              path: /ping
              port: web-ui
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 250Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: downloads-mount
              mountPath: /downloads # Path inside the container
            - name: video-series-mount
              mountPath: /tv # Path inside the container
            - name: video-anime-mount
              mountPath: /anime
            - name: video-movies-mount
              mountPath: /movies
            - name: config
              mountPath: /config
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 100
        runAsNonRoot: true
        runAsUser: 1026
      volumes:
        - name: downloads-mount
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: video-movies-mount
          persistentVolumeClaim:
            claimName: video-movies-pvc
        - name: video-series-mount
          persistentVolumeClaim:
            claimName: video-series-pvc
        - name: video-anime-mount
          persistentVolumeClaim:
            claimName: video-anime-pvc
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-longhorn-pvc
