apps/workloads/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-tv-ui
spec:
  selector:
    app: sonarr
    sonarr-type: tv
  ports:
    - name: web-ui
      port: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-anime-ui
spec:
  selector:
    app: sonarr
    sonarr-type: anime
  ports:
    - name: web-ui
      port: 8989
