apps/workloads/media/sonarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-tv-ui-route
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "sonarr-tv.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr-tv-ui
          port: 8989
      filters:
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "authelia-forward-auth"
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "compress"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-anime-ui-route
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "sonarr-anime.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr-anime-ui
          port: 8989
      filters:
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "authelia-forward-auth"
        - type: ExtensionRef
          extensionRef:
            group: "traefik.io"
            kind: "Middleware"
            name: "compress"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-ui-redirect
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "sonarr.kerrlab.app"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: sonarr-tv.kerrlab.app
            statusCode: 301
